--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript from Zero to Hero</title>
+    <title>Love You Esraa</title>
   </head>
   <body>
     <h1 id="name" style="color: #EE204D;"></h1>
